--- a/Vocatis-Vorlage/printer/vorlage/AppContent.cshtml
+++ b/Vocatis-Vorlage/printer/vorlage/AppContent.cshtml
@@ -64,7 +64,7 @@ case WaitNumberState.Called:
 <section class="room content">
   <h2>Warteschlange</h2>
   <article>
-    <p>Bitte begeben Sie sich in</p>   
+    <p>Ihr Aufruf:</p>   
     <p id="place">@callInfo.RoomName</p>
     <p id="three">STAND: @DateTime.Now.ToString("HH\\:mm") Uhr</p>     
   </article>  
