--- a/Vocatis-Vorlage/printer/styles/display.scss
+++ b/Vocatis-Vorlage/printer/styles/display.scss
@@ -128,6 +128,7 @@ body
     {
         text-align:center;
         position: absolute;
+        width: 100%;
         top: 10px;
         bottom: 10px;
         left: 10px;
