--- a/Vocatis-Vorlage/printer/display/List3.cshtml
+++ b/Vocatis-Vorlage/printer/display/List3.cshtml
@@ -1,113 +1,115 @@
+@using iSign
 @using System.Web.Optimization
 @using Stolltec.Forms.Model
+@using Stolltec.Vocatis
+@using Stolltec.Vocatis.Model
 @{
     var Model = new FormsModel(this);
-    var list1 = Model.DataSource("source1").Select(x => new {
-                   number = x["number1"],
-                   room = x["room1"]
-               });
-    var list2 = Model.DataSource("source2").Select(x => new {
-                   number = x["number2"],
-                   room = x["room2"]
-               });
-    var list3 = Model.DataSource("source3").Select(x => new {
-                   number = x["number3"],
-                   room = x["room3"]
-               });
-    var list4 = Model.DataSource("source4").Select(x => new {
-                   number = x["number4"],
-                   room = x["room4"]
-               });
-    var list5 = Model.DataSource("source5").Select(x => new {
-                   number = x["number5"],
-                   room = x["room5"]
-               });
-    var list6 = Model.DataSource("source6").Select(x => new {
-                   number = x["number6"],
-                   room = x["room6"]
-               });
 
-    var list = list1.Concat(list2).Concat(list3).Concat(list4).Concat(list5).Concat(list6);
+    IEnumerable<DisplayNumber> list = new DisplayNumber[0];
+    for (int i = 1; i <= 6; i++)
+    {
+        var name = "source" + i;
+        var id = (CommonGuidId)Model.Style[name].FieldInstance.Value;
+        if (id.IsEmpty)
+        {
+            continue;
+        }
+
+        list = list.Concat(Vocatis.GetWaitQueueList(id));
+    }
+    var cats = (CommonGuidId[])Model.Style["highlightcat"].FieldInstance.Value ?? new CommonGuidId[0];
+
     // the $.fn.vocatisList function requests the page to update the view
     // We minimize the overhead by just sending the required contents.
     var partial = Request["X-Requested-With"] == "XMLHttpRequest" || (Request.Headers != null && Request.Headers["X-Requested-With"] == "XMLHttpRequest");
 }
 
-@helper ItemsList(IEnumerable<dynamic> list) {
-<table id="list">
-    <tbody>
-        @foreach (var x in list) {
-        <tr>
-            <td class="number">@x.number</td>
-            <td class="room">@x.room</td>
-        </tr>
-        <tr class="spacer">
-            <td colspan="2"></td>
-        </tr>
-        }
-    </tbody>
-</table>
-}
-@if (partial) {
-    @ItemsList(list)
-}
-else {
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Vocatis</title>
-    <link href="@Href("display.css")" type="text/css" rel="Stylesheet" />
-</head>
-<body class="list">
-    @Scripts.Render("~/Scripts/jquery", "~/Scripts/forms", "~/Scripts/vocatis.js")
-    <header>
-        <img src="plattformlogo_01.png" class="plattformlogo" alt="plattformlogo">
-        <h1>Rathaus</h1>
-    </header>
-    <h1>
-        Bitte warten Sie, <br /> bis Ihre Nummer erscheint:
-    </h1>
-    @ItemsList(list)
-
-    @{
-        var notify = Model.Style["notify"].FieldInstance.Value as string;
-        var popup = Model.Style["popup"].FieldInstance.Value as string;
-    }
-    @if (!String.IsNullOrEmpty(notify))
-    {
-        <audio id="notify">
-            <source src="@Href(notify)" type="audio/mp3" />
-        </audio>
-    }
-    @if (!String.IsNullOrEmpty(popup))
-    {
-        <div id="popup" style="display:none;" class="popup @popup">
-            <h3>~room~</h3>
-            <h4>~number~</h4>
-        </div>
-    }
-    <script type="text/javascript">
-        $(document).ready(function () {
-            var popupContent = $("#popup").html();
-
-            $("#list")
-                .vocatisList({
-                    interval: 2500
-                })
-                .highlightNumbers({
-                    items: "tr:not(.spacer)",
-                    call: function (items) {
-                        var audio = document.getElementById("notify");
-                        if (audio) audio.play();
-
-                        if (popupContent) {
-                            $("#popup").html(popupContent.replace("~number~", items[0].number).replace("~room~", items[0].room)).show();
-                            window.setTimeout(function () { $("#popup").hide(); }, 10000);
+@helper ItemsList(IEnumerable<DisplayNumber> list, CommonGuidId[] cats)
+{
+    <table id="list">
+        <tbody>
+            @foreach (var x in list)
+            {
+                <tr>
+                    <td class="number">
+                        @if (x.Categories.Any(cid => cats.Contains(cid.Id)))
+                        {
+                            <img src="termin.png" class="termin" alt="termin">
                         }
-                    }
-                });
-        });
-    </script>
-</body>
+                        @x.Number
+                    </td>
+                    <td class="room">@x.RoomName</td>
+                </tr>
+                <tr class="spacer">
+                    <td colspan="2"></td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
+@if (partial)
+{
+    @ItemsList(list, cats)
+}
+else
+{
+    <!DOCTYPE html>
+    <html>
+    <head>
+        <title>Vocatis</title>
+        <link href="@Href("display.css")" type="text/css" rel="Stylesheet" />
+    </head>
+    <body class="list">
+        @Scripts.Render("~/Scripts/jquery", "~/Scripts/forms", "~/Scripts/vocatis.js")
+        <header>
+            <img src="plattformlogo_01.png" class="plattformlogo" alt="plattformlogo">
+            <h1>Rathaus</h1>
+        </header>
+        <h1>
+            Bitte warten Sie, <br /> bis Ihre Nummer erscheint:
+        </h1>
+        @ItemsList(list, cats)
+
+        @{
+            var notify = Model.Style["notify"].FieldInstance.Value as string;
+            var popup = Model.Style["popup"].FieldInstance.Value as string;
+        }
+        @if (!String.IsNullOrEmpty(notify))
+        {
+            <audio id="notify">
+                <source src="@Href(notify)" type="audio/mp3" />
+            </audio>
+        }
+        @if (!String.IsNullOrEmpty(popup))
+        {
+            <div id="popup" style="display:none;" class="popup @popup">
+                <h3>~room~</h3>
+                <h4>~number~</h4>
+            </div>
+        }
+        <script type="text/javascript">
+            $(document).ready(function () {
+                var popupContent = $("#popup").html();
+
+                $("#list")
+                    .vocatisList({
+                        interval: 2500
+                    })
+                    .highlightNumbers({
+                        items: "tr:not(.spacer)",
+                        call: function (items) {
+                            var audio = document.getElementById("notify");
+                            if (audio) audio.play();
+
+                            if (popupContent) {
+                                $("#popup").html(popupContent.replace("~number~", items[0].number).replace("~room~", items[0].room)).show();
+                                window.setTimeout(function () { $("#popup").hide(); }, 10000);
+                            }
+                        }
+                    });
+            });
+        </script>
+    </body>
 </html>
 }
