--- a/Vocatis-Vorlage/printer/TicketDefault.cshtml
+++ b/Vocatis-Vorlage/printer/TicketDefault.cshtml
@@ -1,6 +1,11 @@
+@using System.Web.Optimization
 @using Stolltec.Forms.Model
 @{
-    var Model = new FormsModel(this);
+  var Model = new FormsModel(this);
+
+  var id = Model.Style["id"].Value;
+  var apppath = Href("App.cshtml", new {id=id});
+  var appurl = new Uri(HttpContext.Current.Request.Url, apppath).AbsoluteUri;
 }
 <!DOCTYPE html>
 <html>
@@ -9,6 +14,7 @@
     <link href="@Href("style.css")" type="text/css" rel="Stylesheet" />
 </head>
 <body>
+@Scripts.Render("~/Scripts/jquery", "js/jquery.qrcode.js")
 <section class="ticket">
   <header>
     <p>
@@ -21,19 +27,21 @@
   </h1>
   <img src="separation.png" class="separation" alt="Trennung">
   <section class="qrcode">
+    <h4>Bitte QR Code einlesen!</h4>
+    <a href="@appurl"></a>
     <img src="customerlogo.png" class="customerlogo" alt="Ersatztext">
   </section>
 </section>
 <script type="text/javascript">
   window.onload = function () {
+    var appurl = $(".qrcode>a").attr("href");
+    $("section.qrcode>a").qrcode({text: appurl})
     window.focus();
     window.print();
     // remove this line for testing:
-    //window.setTimeout(function () { window.close() }, 1000);
+    window.setTimeout(function () { window.close() }, 1000);
   };
 </script>
-    
 </body>
-
 </html>
     
