Korrektur WebApp Stand Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/Vocatis-Vorlage/display/List3.cshtml
+++ b/Vocatis-Vorlage/display/List3.cshtml
@@ -64,7 +64,7 @@ else
         @Scripts.Render("~/Scripts/jquery", "~/Scripts/forms", "~/Scripts/vocatis.js")
         <header>
             <img src="plattformlogo_01.png" class="plattformlogo" alt="plattformlogo">
-            <h1>Rathaus</h1>
+            <h1>Wartebereich</h1>
         </header>
         <h1>
             Bitte warten Sie, <br /> bis Ihre Nummer erscheint:
