--- a/Vocatis-Vorlage/styles/ticket.scss
+++ b/Vocatis-Vorlage/styles/ticket.scss
@@ -28,7 +28,7 @@ section.ticket
     {
         text-align: center;
         font-size: 12px;
-        line-height: 15px;
+        line-height: 13px;
     }
     
     h1
@@ -36,7 +36,7 @@ section.ticket
         text-align: center;
         font-size: 40px;
         color: #000;
-        line-height: 2px;
+        line-height: 1px;
     }
     img
     {
@@ -47,7 +47,7 @@ section.ticket
         font-size: 12px;
         font-weight:regular;
         color: #000;
-        margin-top: 1px;
+        margin:1px;
     }
     canvas
     {
