--- a/Vocatis-Vorlage/display/List.cshtml
+++ b/Vocatis-Vorlage/display/List.cshtml
@@ -53,7 +53,7 @@ else
     @Scripts.Render("~/Scripts/jquery", "~/Scripts/forms", "~/Scripts/vocatis.js")
     <header>
         <img src="plattformlogo_01.png" class="plattformlogo" alt="plattformlogo">
-        <h1>Rathaus</h1>
+        <h1>Wartebereich</h1>
     </header>
     <h2>
         Bitte warten Sie, bis Ihre Nummer erscheint:
