--- a/Vocatis-Vorlage/styles/app.scss
+++ b/Vocatis-Vorlage/styles/app.scss
@@ -45,7 +45,6 @@ header
     {
         position: absolute;
         font-size: 1rem;
-        
     }
 
     @media (orientation: landscape)
@@ -134,7 +133,7 @@ section.logo
         font-size: 1.25rem;
         font-weight: bold;
         padding: 8vh 2vw;  
-     }
+    }
 
     p
     {
@@ -157,18 +156,35 @@ section.content
     position: relative;
     margin: 0 15vw;
     height: 60vh;
-
+    
     h2 
     {
         color:$color-primary-foreground;
         background-color: $color-primary-background;
 
-        text-align: right;
         font-size: .75rem;
         line-height: 2vh;
         padding: 2vh 3vw;  
     }
+    
+    @media (orientation: landscape)
+    {
+        h2
+        {
+            text-align: left;
+            font-size: .65rem;
+        } 
+    }
 
+    @media (orientation: portrait)
+    {
+        h2
+        {
+            text-align: right;
+        }
+    }
+
+   
     article
     {
         background-color: $color-secondary-background;
@@ -184,7 +200,7 @@ section.content
             width: 20%;
             max-height: 19vh;
             float: right;
-            padding: 0vh 2vw;
+            padding: 1vh 2vw;
             .cls-1{fill:$color-secondary-foreground;}
             .cls-2{font-size:1em; fill:$color-highlight-foreground;}
          }
@@ -196,7 +212,7 @@ section.content
         #three
         {
             font-size: 0.75rem;
-            margin-top: 6vh;   
+            margin-top: 3vh;   
         }
     }
     
@@ -216,7 +232,6 @@ section.content
             max-width: 60%;
             font-size: 0.75rem;
             font-weight: normal;
-            padding: 0vh 1vw; 
             }
 
         h4
@@ -250,6 +265,11 @@ section.content
             height: 52vh;
             width: 50%;
             float: left;
+
+            h3
+            {
+                padding: 1vh 1vw;
+            }
         }
         div.notch 
         {
@@ -276,6 +296,11 @@ section.content
         div.number
         {
             height: 26vh;
+            
+            h3
+            {
+                padding: 0vh 1vw; 
+            }
         }
         div.notch 
         {
