TicketDefault.cshtml bei Druck anzeigen

--- a/Vocatis-Vorlage/printer/TicketDefault.cshtml
+++ b/Vocatis-Vorlage/printer/TicketDefault.cshtml
@@ -15,7 +15,7 @@
 </head>
 <body>
 @Scripts.Render("~/Scripts/jquery", "js/jquery.qrcode.js")
-<section class="ticket">
+<section class="ticket print_ticket">
   <header>
     <p>
       @DateTime.Now.ToString("dd.MM.yyyy")<br>
