korrektur Ticket & popup
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/Vocatis-Vorlage/printer/PrinterTicket.cshtml
+++ b/Vocatis-Vorlage/printer/PrinterTicket.cshtml
@@ -24,7 +24,7 @@ var appurl = new Uri(HttpContext.Current.Request.Url, apppath).AbsoluteUri;
   </h1>
   <img src="separation.png" class="separation" alt="Trennung">
   <section class="qrcode">
-    <h4>Bitte Aufruf verfolgen!</h4>
+    <h4>Aufruf verfolgen</h4>
     <a href="@appurl"></a>
     <img src="customerlogo.png" class="customerlogo" alt="Ersatztext">
   </section>
