--- a/Vocatis-Vorlage/styles/ticket.scss
+++ b/Vocatis-Vorlage/styles/ticket.scss
@@ -20,6 +20,7 @@ section.ticket
     display: block;
     /* paper: 58mm, paper-margin 5mm */
     width: 48mm;
+    margin: 5mm;
 
     background-color:white;
     color: black;
