--- a/Vocatis-Vorlage/printer/QueueList.cshtml
+++ b/Vocatis-Vorlage/printer/QueueList.cshtml
@@ -36,7 +36,7 @@
           <span>
             @if (status.QueueLength > 3)
             {
-              <text>Voraussichtliche Wartezeit ca. @((int)status.CurrentMaxWaitingTime.TotalMinutes) Minuten</text>
+              <text>Es befinden sich noch <b> @status.QueueLength Kunden </b>vor Ihnen in der Warteschlange</text>
             }
             else
             {
