--- a/Vocatis-Vorlage/styles/display.scss
+++ b/Vocatis-Vorlage/styles/display.scss
@@ -93,7 +93,7 @@ body
         width: 35%;
         font-weight: bold;
         line-height: 7vh;
-        text-align: center; 
+        text-align: right; 
 
         /* termin */
         img.termin
