--- a/Vocatis-Vorlage/printer/TicketDefault.cshtml
+++ b/Vocatis-Vorlage/printer/TicketDefault.cshtml
@@ -17,7 +17,7 @@
 @Scripts.Render("~/Scripts/jquery", "js/jquery.qrcode.js")
 <section class="ticket print_ticket">
     <div>
-      @DateTime.Now.ToString("dd.MM.yyyy")
+      @DateTime.Now.ToString("dd.MM.yyyy")&emsp;
       @DateTime.Now.ToString("HH:mm")Uhr
     </div>
   <h1>
