list 3 Überschrift layot
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/Vocatis-Vorlage/display/List3.cshtml
+++ b/Vocatis-Vorlage/display/List3.cshtml
@@ -67,9 +67,9 @@ else
             <img src="plattformlogo_01.png" class="plattformlogo" alt="plattformlogo">
             <h1>Wartebereich</h1>
         </header>
-        <h1>
-            Bitte warten Sie, <br /> bis Ihre Nummer erscheint:
-        </h1>
+        <h2>
+            Bitte warten Sie, bis Ihre Nummer erscheint:
+        </h2>
         @ItemsList(list, cats)
 
         @{
