--- a/Vocatis-Vorlage/display/List.cshtml
+++ b/Vocatis-Vorlage/display/List.cshtml
@@ -7,7 +7,7 @@
     var Model = new FormsModel(this);
     var id = (CommonGuidId)Model.Style["source"].FieldInstance.Value;
     var cats = (CommonGuidId[])Model.Style["highlightcat"].FieldInstance.Value ?? new CommonGuidId[0];
-    var list = Vocatis.GetWaitQueueList(id);
+    var list = Vocatis.GetWaitQueueList(id).Take(8);
 
     // the $.fn.vocatisList function requests the page to update the view
     // We minimize the overhead by just sending the required contents.
