--- a/Vocatis-Vorlage/styles/display.scss
+++ b/Vocatis-Vorlage/styles/display.scss
@@ -124,10 +124,11 @@ body
         color: $color-secondary-foreground;
 		box-shadow: 1px 3px 1px $color-secondary-shadow; 
     }
-    #popup
+    #popup.popup.simple
     {
-        text-align:center;
         position: absolute;
+        text-align:center;
+        width: 100%;
         top: 0px;
         bottom: 0px;
         left: 0px;
@@ -138,14 +139,17 @@ body
 
         h3
         {
+            
             font-size: 8rem;
             padding-top: 6rem;
+            width: 95%;
         }
 
         #text, h4
         {
-            font-size: 15rem;
+            font-size: 10rem;
             margin-top: 20rem;
+            width: 95%;
         }
     }
 }
