Abstand &  Ticket no_App
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/Vocatis-Vorlage/printer/App.cshtml
+++ b/Vocatis-Vorlage/printer/App.cshtml
@@ -16,7 +16,7 @@
 </header>
 
 <section class="logo">
-  <img src="customerlogo.png" />
+  <img src="customerlogo01.png" />
 </section>
 
 <div id="content" data-content-src="@Href("AppContent.cshtml", new {id=Request["id"]})">
