--- a/Vocatis-Vorlage/printer/TicketDefault.cshtml
+++ b/Vocatis-Vorlage/printer/TicketDefault.cshtml
@@ -24,6 +24,9 @@
     @Model.Style["ticketnumber"].Value
   </h1>
   <img src="separation.png" class="separation" alt="Trennung">
+  <section class="qrcode">
+    <img src="customerlogo01.png" class="customerlogo01" alt="Ersatztext">
+  </section>
 </section>
 <script type="text/javascript">
   window.onload = function () {
@@ -35,6 +38,7 @@
     window.setTimeout(function () { window.close() }, 1000);
   };
 </script>
+.
 </body>
 </html>
     
