--- a/Vocatis-Vorlage/printer/TicketDefault.cshtml
+++ b/Vocatis-Vorlage/printer/TicketDefault.cshtml
@@ -28,6 +28,7 @@
     <h4>Bitte QR Code einlesen!</h4>
     <a href="@appurl"></a>
     <img src="customerlogo.png" class="customerlogo" alt="Ersatztext">
+    <div> id="space"</div>
   </section>
 </section>
 <script type="text/javascript">
