Abstandhalter durch Punkt II
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/Vocatis-Vorlage/printer/PrinterTicket.cshtml
+++ b/Vocatis-Vorlage/printer/PrinterTicket.cshtml
@@ -29,6 +29,7 @@ var appurl = new Uri(HttpContext.Current.Request.Url, apppath).AbsoluteUri;
     <img src="customerlogo.png" class="customerlogo" alt="Ersatztext">
   </section>
   <footer>
+  <p style="color: white;">.</p>
   </footer>
 </section>
 <script type="text/javascript">
