--- a/Vocatis-Vorlage/styles/display.scss
+++ b/Vocatis-Vorlage/styles/display.scss
@@ -57,7 +57,7 @@ body
 .list
 {
     height: 100%;
-    width: 100%;
+    width: 90%;
     position:fixed;
     padding:0vh 5vw 4vh 5vw;
 
@@ -124,7 +124,7 @@ body
         color: $color-secondary-foreground;
 		box-shadow: 1px 3px 1px $color-secondary-shadow; 
     }
-    #popup.popup.simple
+    div#popup.popup.simple
     {
         position: absolute;
         text-align:center;
@@ -142,14 +142,14 @@ body
             
             font-size: 8rem;
             padding-top: 6rem;
-            width: 95%;
+            width: 100%;
         }
 
         #text, h4
         {
             font-size: 10rem;
             margin-top: 20rem;
-            width: 95%;
+            width: 100%;
         }
     }
 }
