--- a/5.0/printer/PrinterTicket.cshtml
+++ b/5.0/printer/PrinterTicket.cshtml
@@ -24,10 +24,9 @@ var appurl = new Uri(HttpContext.Current.Request.Url, apppath).AbsoluteUri;
   </h1>
   <img src="separation.png" class="separation" alt="Trennung">
   <section class="qrcode">
-    <img src="customerlogo01.png" class="customerlogo01" alt="logo">
+    <img src="customerlogo.png" class="customerlogo" alt="Ersatztext">
   </section>
   <footer>
-  <p style="color: white;">.</p>
   </footer>
 </section>
 <script type="text/javascript">
@@ -51,6 +50,6 @@ else {
   <div class="print_ticket" style="display: block !important;">
     @content()
   </div>
-</body>
+</body>.
 </html>
 }
