--- a/5.0/printer/TicketDefault.cshtml
+++ b/5.0/printer/TicketDefault.cshtml
@@ -25,7 +25,7 @@
   </h1>
   <img src="separation.png" class="separation" alt="Trennung">
   <section class="qrcode">
-    <img src="customerlogo01.png" class="customerlogo01" alt="Ersatztext">
+    <img src="customerlogo.png" class="customerlogo" alt="Ersatztext">
   </section>
 </section>
 <script type="text/javascript">
@@ -38,7 +38,6 @@
     window.setTimeout(function () { window.close() }, 1000);
   };
 </script>
-.
 </body>
 </html>
     
