--- a/5.0/printer/App.cshtml
+++ b/5.0/printer/App.cshtml
@@ -16,7 +16,7 @@
 </header>
 
 <section class="logo">
-  <img src="customerlogo01.png" />
+  <img src="customerlogo.png" />
 </section>
 
 <div id="content" data-content-src="@Href("AppContent.cshtml", new {id=Request["id"]})">
