--- a/5.0/printer/TicketDefault.cshtml
+++ b/5.0/printer/TicketDefault.cshtml
@@ -27,7 +27,7 @@
   <img src="separation.png" class="separation" alt="Trennung">
   <section class="qrcode">
     @if (withQrCode) {
-    <h4>Aufruf verfolgen</h4>
+    <h4>Bitte QR Code einlesen!</h4>
     <a href="@appurl"></a>
     }
     <img src="customerlogo.png" class="customerlogo" alt="Ersatztext">
