test_ abstand ohne QR Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/5.0/styles/printer.scss
+++ b/5.0/styles/printer.scss
@@ -245,8 +245,10 @@ body.printer
     footer
     {
         position: fixed;
-        bottom: 0;
+        bottom: 0mm;
         right: 0;
         left: 0;
+       
     }
+
 }
