--- a/5.0/printer/PrinterTicket.cshtml
+++ b/5.0/printer/PrinterTicket.cshtml
@@ -26,6 +26,7 @@ var appurl = new Uri(HttpContext.Current.Request.Url, apppath).AbsoluteUri;
   <section class="qrcode">
     <img src="customerlogo.png" class="customerlogo" alt="Ersatztext">
   </section>
+  <div class="abstand" style="margin-top: 25mm;">.</div>
   <footer>
   </footer>
 </section>
@@ -50,6 +51,6 @@ else {
   <div class="print_ticket" style="display: block !important;">
     @content()
   </div>
-</body>.
+</body>
 </html>
 }
