--- a/5.0/styles/ticket.scss
+++ b/5.0/styles/ticket.scss
@@ -47,10 +47,10 @@ section.ticket
     }
     h4
     {
-        font-size: 12px;
-        font-weight:regular;
+        font-size: 15px;
+        float: left;
         color: #000;
-        margin:1px;
+        margin-top: 25mm;
     }
     canvas
     {
@@ -64,5 +64,15 @@ section.ticket
         float: right;
         margin-top: 2px;
     }
+   
 
+} 
+
+div.abstand
+{  
+    position: relative;
+     width: 100%;
+    height: 25mm;
+    float: right;
+    margin-top: 25mm;
 }
