--- a/5.0/printer/TicketDefault.cshtml
+++ b/5.0/printer/TicketDefault.cshtml
@@ -15,7 +15,7 @@
 </head>
 <body>
 @Scripts.Render("~/Scripts/jquery", "js/jquery.qrcode.js")
-<section class="ticket print_ticket">
+<section class="ticket print_ticket"> test
     <div>
       @DateTime.Now.ToString("dd.MM.yyyy")&emsp;
       @DateTime.Now.ToString("HH:mm")Uhr
@@ -25,9 +25,9 @@
   </h1>
   <img src="separation.png" class="separation" alt="Trennung">
   <section class="qrcode">
-    <img src="customerlogo.png" class="customerlogo" alt="Ersatztext">
+    <img src="customerlogo.png" class="customerlogo" alt="Ersatztext"> 
   </section>
-</section>
+  </section>
 <script type="text/javascript">
   window.onload = function () {
     var appurl = $(".qrcode>a").attr("href");
