--- a/5.0/styles/ticket.scss
+++ b/5.0/styles/ticket.scss
@@ -15,6 +15,7 @@
     body>*:not(.print_ticket) { display: none !important; }
 }
 
+
 section.ticket 
 {   
     display: block;
@@ -37,7 +38,7 @@ section.ticket
     {
         text-align: center;
         font-size: 40px;
-        color: #000;
+        color:black;
         line-height: 1px;
     }
    
@@ -62,17 +63,12 @@ section.ticket
         height: 23mm;
         width: auto;
         float: right;
-        margin-top: 2px;
+        margin-top: 2px;}   
+    div.abstand
+    {
+        float: right;
+        width: 100%;
     }
-   
+    }
 
-} 
 
-div.abstand
-{  
-    position: relative;
-     width: 100%;
-    height: 25mm;
-    float: right;
-    margin-top: 25mm;
-}
