--- a/5.0/printer/TicketDefault.cshtml
+++ b/5.0/printer/TicketDefault.cshtml
@@ -15,7 +15,7 @@
 </head>
 <body>
 @Scripts.Render("~/Scripts/jquery", "js/jquery.qrcode.js")
-<section class="ticket print_ticket"> test
+<section class="ticket print_ticket">
     <div>
       @DateTime.Now.ToString("dd.MM.yyyy")&emsp;
       @DateTime.Now.ToString("HH:mm")Uhr
