closed-hours closed-manually closed-limit
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/5.0/styles/colors.scss
+++ b/5.0/styles/colors.scss
@@ -11,3 +11,5 @@ $color-highlight-background: red;
 $color-highlight-foreground: white;
 $color-common-background: $color-primary-foreground;
 $color-common-foreground: $color-primary-background;
+$color-font-shadow:#707173e0;
+
