Layout change_ Font size & size man
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/5.0/printer/QueueList.cshtml
+++ b/5.0/printer/QueueList.cshtml
@@ -36,7 +36,7 @@
           <span>
             @if (status.QueueLength > 3)
             {
-              <text>Es befinden sich noch <b> @status.QueueLength Kunden </b>vor Ihnen in der Warteschlange</text>
+              <text>Es befinden sich noch <b> @status.QueueLength Kunden </b>vor Ihnen</text>
             }
             else
             {
