--- a/5.0/printer/AppContent.cshtml
+++ b/5.0/printer/AppContent.cshtml
@@ -14,7 +14,7 @@ case WaitNumberState.Parked:
 <section class="main content">
   <h2>Warteschlange</h2>
   <article>
-    <p>Es befinden sich noch <b>@status.Position Kunden</b> vor Ihnen in der Warteschlange.</p>     
+    <p>Es befinden sich noch <b>@status.Position Kunden</b> vor Ihnen</p>     
     
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 39.7 71.2">
       <path class="cls-1" d="M11.6,14.3A6.51,6.51,0,0,0,18.1,8h0a6.38,6.38,0,0,0-6.5-6.3A6.45,6.45,0,0,0,5.1,8a6.51,6.51,0,0,0,6.5,6.3h0" transform="translate(1)"/>
@@ -38,7 +38,7 @@ case WaitNumberState.Parked:
 <section class="wait01 content">
   <h2>Warteschlange</h2>
   <article>
-    <p>Es befinden sich noch <b>@status.Position Kunden</b> vor Ihnen in der Warteschlange.</p>
+    <p>Es befinden sich noch <b>@status.Position Kunden</b> vor Ihnen</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 39.7 71.2">
             <path class="cls-1" d="M11.6,14.3A6.51,6.51,0,0,0,18.1,8h0a6.38,6.38,0,0,0-6.5-6.3A6.45,6.45,0,0,0,5.1,8a6.51,6.51,0,0,0,6.5,6.3h0" transform="translate(1)"/>
             <path class="cls-1" d="M27,12.8a6.51,6.51,0,0,0,6.5-6.3h0a6.5,6.5,0,0,0-13,0A6.32,6.32,0,0,0,27,12.8h0" transform="translate(1)"/>
