--- a/5.0/styles/ticket.scss
+++ b/5.0/styles/ticket.scss
@@ -38,7 +38,7 @@ section.ticket
     {
         text-align: center;
         font-size: 40px;
-        color:red;
+        color: #000;
         line-height: 1px;
     }
    
