change text customer
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/5.0/printer/QueueList.cshtml
+++ b/5.0/printer/QueueList.cshtml
@@ -75,7 +75,7 @@
         @((string)Model.Style["text" + i].Value)
       </div>
       <div>
-        geschlossen 
+        Geschlossen, keine freie Kapazität mehr 
       </div>
     </li>
     @* closed by opening hours *@
@@ -101,7 +101,7 @@
         @((string)Model.Style["text" + i].Value)
       </div>
       <div>
-        aktuell geschlossen
+        Derzeit geschlossen 
       </div>
     </li>
     }}}
