--- a/5.0/printer/TicketDefault.cshtml
+++ b/5.0/printer/TicketDefault.cshtml
@@ -1,6 +1,7 @@
 @using System.Web.Optimization
 @using Stolltec.Forms.Model
 @{
+  var withQrCode = false;
   var Model = new FormsModel(this);
 
   var id = Model.Style["id"].Value;
@@ -25,8 +26,11 @@
   </h1>
   <img src="separation.png" class="separation" alt="Trennung">
   <section class="qrcode">
-    <img src="customerlogo.png" class="customerlogo" alt="Ersatztext"> 
-  </section>
+    @if (withQrCode) {
+    <h4>Aufruf verfolgen</h4>
+    <a href="@appurl"></a>
+    }
+    <img src="customerlogo.png" class="customerlogo" alt="Ersatztext">
   </section>
 <script type="text/javascript">
   window.onload = function () {
